Added Some info

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <div class="Header">
         <img id="pfp" src="Images/IMG_1986.PNG.png">
         <h1 id ="un">Themistermazin</h1>
-
+    </div>
+    <div class="Description">
+        <p id = "about">
+            Not a doctor. Tech, edit photos and videos, Code, Food, Music, Aviation, Space, Aerospace.
+        </p>
     </div>
 </body>
 </html>
