--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Themistermazin</title>
     <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body background="Images/">
     <div class="Header">
@@ -17,6 +18,32 @@
         <p id = "about">
             Not a doctor. Tech, edit photos and videos, Code, Food, Music, Aviation, Space, Aerospace.
         </p>
+    </div>
+    <div class="links">
+        <a href="https://twitter.com/themistermazin">
+            <h3>Twitter</h3>
+        </a>
+        <a href="https://instagram.com/themistermazin/">
+            <h3>Instagram(Private)</h3>
+        </a>
+        <a href="https://github.com/Themistermazin">
+            <h3>GitHub</h3>
+        </a>
+        <a href="https://twitter.com/themistermazinA">
+            <h3>Twitter(Alt)</h3>
+        </a>
+        <a href="https://unsplash.com/@themistermazin">
+            <h3>Unsplash</h3>
+        </a>
+        <a href="https://music.apple.com/profile/themistermazin">
+            <h3>Apple Music</h3>
+        </a>
+        <a href="https://discord.gg/ezW3MFpjV5">
+            <h3>Aviation Group Chat</h3>
+        </a>
+        <a href="mailto:mazineditsofficial@gmail.com">
+            <h3>Email</h3>
+        </a>
     </div>
 </body>
 </html>
