--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </div>
     <div class="Description">
         <p id = "about">
-            Not a doctor. Tech, edit photos and videos, Code, Food, Music, Aviation, Space, Aerospace.
+            Will get back to you in 2-4 business days; Not a doctor : Tech | Aviation | Food | Music | TV/Movies | Photos & Videos | Adobe CC | Alt 
+@themistermazinA
         </p>
     </div>
     <div class="links">
